# Qt-dip

./: CMakeLists.txt  Qt-dip_zh_CN.ts  mainwindow.cpp  mainwindow.h  mainwindow.ui
backup/: cpp.md  trans.txt
src/main/cpp/core/: Candy.cpp  Candy.h
src/main/cpp/ui/: Pch.h  UiPch.h  someform.cpp  someform.h  someform.ui
